hphp/test/zend/good/Zend/tests/finally_goto_001.php.expectf

Fatal error: 'goto' into loop or switch statement is disallowed in %s/finally_goto_001.php on line 2
